--- a/style.css
+++ b/style.css
@@ -674,7 +674,8 @@ footer .content {
     font-size: 0.8rem;
   }
   .me h1 {
-    font-size: 2rem;
+    font-size: 4rem;
+    line-height: 4rem;
   }
   .me h2 {
     font-size: 1rem;
