--- a/style.css
+++ b/style.css
@@ -75,6 +75,12 @@ nav a:hover {
 }
 
 .brand {
+  width: 180px;
+  height: 80px;
+  background-image: url("images/image.png");
+  background-position: center;
+  background-size: cover;
+  background-repeat: none;
   display: flex;
   font-size: 1.2rem;
   color: rgb(0, 0, 0);
@@ -571,7 +577,7 @@ footer .content {
   .navigationContainer {
     flex-direction: row;
     align-items: center;
-    padding: 10px 20px;
+    padding: 0px 10px 0px 10px;
   }
   nav {
     display: none; /* Hide default nav */
@@ -615,7 +621,7 @@ footer .content {
     background-color: rgb(255, 255, 255);
     color: #000000;
     text-align: center;
-    padding: 20px 20px;
+    padding: 10px 20px;
     transition: top 1s ease-in-out;
   }
 
