--- a/style.css
+++ b/style.css
@@ -189,8 +189,8 @@ p {
 }
 
 .about .image {
-  width: 600px;
-  height: 600px;
+  width: 500px;
+  height: 700px;
   background-image: url("images/cia.png");
   background-position: center;
   background-size: cover;
@@ -235,13 +235,24 @@ p {
 
 .about .list .row .card {
   width: 33%;
-  border-radius: 10px;
-  box-shadow: 0px 20px 26px rgba(0, 0, 0, 0.1);
+  border-radius: 20px;
+  box-shadow: 0px 10px 16px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease-in-out;
+}
+
+.about .card:hover {
+  transform: scale(1.05);
 }
 
 .about .list .row .card p {
-  font-size: 1rem;
-  padding: 10px;
+  font-size: 1.3rem;
+  color: rgb(58, 58, 58);
+  padding: 10px 20px;
+}
+
+.card .img {
+  width: 100%;
+  border-radius: 20px 20px 0px 0px;
 }
 
 .about p {
