--- a/style.css
+++ b/style.css
@@ -190,7 +190,7 @@ p {
 
 .about .image {
   width: 500px;
-  height: 590px;
+  height: 560px;
   background-image: url("images/cia.png");
   background-position: center;
   background-size: cover;
@@ -237,15 +237,16 @@ p {
 .about .list .row .card {
   width: 33%;
   border-radius: 20px;
-  box-shadow: 0px 10px 16px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s ease-in-out;
 }
 
 .about .list .row .card p {
   font-size: 1.1rem;
+  line-height: 1.1rem;
   font-weight: 600;
   color: #313131;
-  padding: 10px 20px;
+  padding: 20px 10px 5px 20px;
+  margin: 0;
 }
 
 .card .img {
@@ -259,6 +260,12 @@ p {
 
 .about p {
   color: #464646;
+}
+
+.about .smalltext {
+  font-size: 0.9rem;
+  padding: 0px 20px;
+  margin: 0;
 }
 
 .prices {
@@ -280,13 +287,13 @@ p {
   align-items: center;
   padding: 20px;
   gap: 30px;
+  margin-top: 20px;
 }
 
 .prices .card {
   height: 300px;
   background-color: white;
   padding: 20px;
-  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
   border-radius: 10px;
   display: flex;
   flex-direction: column;
@@ -358,7 +365,7 @@ p {
   margin: 0;
   padding: 0;
   line-height: 3rem;
-  color: #000000;
+  color: #ffffff;
 }
 
 .prices h1 {
@@ -371,7 +378,7 @@ p {
 
 .prices h2 {
   font-size: 1.3rem;
-  color: #313131;
+  color: #ffffff;
 }
 
 .prices h3 {
@@ -395,7 +402,7 @@ p {
   align-items: center;
   padding: 40px 40px 10px 40px;
   overflow: hidden;
-  margin: 50px 50px 50px 0px;
+  margin: 20px 50px 20px 0px;
 }
 
 .recensioner .card {
