--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 
 /* Body Styling */
 body {
-  font-family: "Nunito", sans-serif;
+  font-family: "aileron", sans-serif;
   line-height: 1.6;
   background-color: #fff;
   color: #2b2a2b;
@@ -77,7 +77,7 @@ nav a:hover {
 .brand {
   display: flex; /* Use flexbox to align elements horizontally */
   align-items: center; /* Vertically center the items in the flex container */
-  font-family: "Dongle", sans-serif;
+  font-family: "aileron", sans-serif;
   font-size: 2.5rem;
   margin: 0;
   color: #2b2a2b;
@@ -161,7 +161,7 @@ button:hover {
 }
 
 h1 {
-  font-family: "Open Sans", sans-serif;
+  font-family: "aileron", sans-serif;
   color: #161616;
   font-size: 4rem;
   font-weight: 700;
@@ -171,7 +171,7 @@ h1 {
 .hero h3 {
   display: flex; /* Use flexbox to align elements horizontally */
   align-items: center; /* Vertically center the items in the flex container */
-  font-family: "Dongle", sans-serif;
+  font-family: "aileron", sans-serif;
   font-size: 4rem;
   font-weight: 500;
   color: #2b2a2b;
