--- a/style.css
+++ b/style.css
@@ -305,69 +305,52 @@ p {
   justify-content: start;
   align-items: center;
   padding: 20px;
-  gap: 30px;
+  gap: 40px;
   margin-top: 20px;
 }
 
-.prices .card {
-  height: 300px;
-  background-color: white;
-  padding: 20px;
-  border-radius: 10px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.prices .card1 h2,
-.prices .card2 h2,
-.prices .card3 h2,
-.prices .card4 h2 {
-  align-self: center;
-}
-
-.prices .card2 {
+.prices .card1 {
   width: 33%;
-  height: 350px;
-  background-image: url("images/botox.png");
-  background-position: center;
-  background-size: cover;
-  background-repeat: none;
-  padding: 20px;
-  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.1);
+  padding: 50px;
+  color: #202020;
+  box-shadow: 5px 5px 10px 10px rgba(0, 0, 0, 0.1);
   border-radius: 20px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  justify-content: flex-start;
+  align-items: flex-start;
+  transition: transform 0.5s ease-in-out, filter 0.5s ease-in-out; /* Transition for smooth zoom */
+}
+
+.prices .card2 {
+  background: #e0b276;
+  color: white;
+  width: 33%;
+  padding: 50px;
+  box-shadow: 5px 5px 10px 10px rgba(0, 0, 0, 0.1);
+  border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
   transition: transform 0.5s ease-in-out, filter 0.5s ease-in-out; /* Transition for smooth zoom */
 }
 
 .prices .card3 {
   width: 33%;
-  height: 350px;
-  background-image: url("images/fillers.png");
-  background-position: center;
-  background-size: cover;
-  background-repeat: none;
   padding: 20px;
-  box-shadow: 5px 5px 2px rgba(0, 0, 0, 0.1);
+  box-shadow: 5px 5px 10px 10px rgba(0, 0, 0, 0.1);
   border-radius: 20px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  justify-content: flex-start;
+  align-items: flex-start;
   transition: transform 0.3s ease-in-out, filter 0.3s ease-in-out; /* Transition for smooth zoom */
 }
 
 .prices .card4 {
   width: 33%;
   height: 350px;
-  background-image: url("images/profhilo.png");
-  background-position: center;
-  background-size: cover;
-  background-repeat: none;
   padding: 20px;
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.1);
   border-radius: 20px;
@@ -378,19 +361,21 @@ p {
   transition: transform 0.3s ease-in-out, filter 0.3s ease-in-out; /* Transition for smooth zoom */
 }
 
-.prices .card1:hover,
-.card2:hover,
-.card3:hover,
-.card4:hover {
-  filter: grayscale(100%);
+.card1 a {
+  align-self: center;
+  margin-top: auto; /* Optional: push button to bottom */
+}
+
+.card2 a {
+  align-self: center;
+  margin-top: auto; /* Optional: push button to bottom */
 }
 
 .prices .row h1 {
-  font-size: 2.6rem;
+  font-size: 2.5rem;
   margin: 0;
   padding: 0;
-  line-height: 3rem;
-  color: rgb(26, 26, 26);
+  line-height: 2.5rem;
 }
 
 .prices h1 {
@@ -398,17 +383,15 @@ p {
   margin: 0;
   padding: 0;
   line-height: 3rem;
-  color: #2c2c2c;
 }
 
 .prices h2 {
-  align-self: flex-start; /* pin the heading to the left edge */
-  text-align: left;
+  font-size: 3rem;
+  line-height: 3rem;
 }
 
 .prices h3 {
   font-size: 1rem;
-  color: rgb(26, 26, 26);
 }
 
 .prices button {
