--- a/style.css
+++ b/style.css
@@ -661,9 +661,13 @@ footer .content {
   }
   .prices .card1 {
     width: 100%;
+    padding: 30px;
+    font-size: 0.9rem;
   }
   .prices .card2 {
     width: 100%;
+    padding: 30px;
+    font-size: 0.9rem;
   }
   .prices .card3 {
     width: 100%;
@@ -818,11 +822,14 @@ footer .content {
     font-size: 1.2rem;
     line-height: 1.2rem;
   }
+  .about h1 {
+    font-size: 3rem;
+  }
 }
 
 @media (max-width: 348px) {
   .about h1 {
-    font-size: 3rem;
+    font-size: 2.5rem;
   }
 }
 
